--- a/EDO-PVI.ipynb
+++ b/EDO-PVI.ipynb
@@ -483,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consideremos el sistema de EDOs $$\\dfrac{d}{dt}S(t)=\\begin{bmatrix} 0  & t^2 // -t & 0\\end{bmatrix}S(t),$$ con condicion inicial $S_0=\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix}$."
+    "Consideremos el sistema de EDOs $$\\dfrac{d}{dt}S(t)=\\begin{bmatrix} 0  & t^2 \\\\ -t & 0\\end{bmatrix}S(t),$$ con condicion inicial $S_0=\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix}$."
    ]
   },
   {
